# MPTool

./: .gitignore  CMakeLists.txt  README.md  crc16.h  defs.h  hidapi_transport.c  hidapi_transport.h  main.c  mcu_transport.c  mcu_transport.h  rtlbt.c  rtlbt.h  rtlimg.c  rtlimg.h  rtlmptool.c  rtlmptool.h  transport.h  usb_transport.c  winmain.c
cmake/: mingw32.cmake
rtlmp/: CMakeLists.txt  crc16.c  rtlbt.c  rtlbt.h  rtlimg.c  rtlimg.h  rtlmp.c  rtlmp.h  rtlmptool.c  rtlmptool.h
transport/: CMakeLists.txt  com_transport.c  defs.h  hidapi_transport.c  mcu_transport.c  mcu_transport.h  serial_transport.c  transport.c  transport.h  usb_transport.c
ui/: CMakeLists.txt  gui.glade  gui.glade~  gui.rc  guimain.c  main.c
