add_executable(MPTool)
target_sources(MPTool PRIVATE main.c)
target_link_libraries(MPTool PRIVATE rtlmp transport)
 
find_package (PkgConfig REQUIRED)
if(WIN32)
pkg_check_modules (GTK3 REQUIRED gtk+-win32-3.0)
else(WIN32)
pkg_check_modules (GTK3 REQUIRED gtk+-3.0)
endif(WIN32)

add_executable(MPToolGui)
target_sources(MPToolGui PRIVATE guimain.c)
target_link_libraries(MPToolGui PRIVATE rtlmp transport ${GTK3_STATIC_LIBRARIES})
target_include_directories(MPToolGui PRIVATE ${GTK3_INCLUDE_DIRS})
# target_link_options(MPToolGui PRIVATE -Wl,-subsystem,windows)
